# FeatureBench

./: README.md  config_example.toml  pyproject.toml
docs/: config.md  infer_cli_arg.md
featurebench/: cli.py  pipeline.py
featurebench/docker/: image_manager.py
featurebench/harness/: container.py  review_codes.py  run_evaluation.py
featurebench/infer/: container.py  models.py  render_infer_log.py  run_infer.py  runtime.py
featurebench/infer/agents/: base.py  openhands.py
tests/: test_eval_data_container_cleanup.py  test_infer_container_cleanup.py  test_openhands_dual_container_isolation.py  test_openhands_session_cache.py
